# halo2arith

./: Cargo.toml  README.md
src/: lib.rs  main_gate.rs  utils.rs
src/main_gate/: four.rs
src/main_gate/five/: main_gate.rs  range.rs
src/main_gate/four/: main_gate.rs  range.rs
