[package]
name = "maingate"
version = "0.1.0"
authors = ["kilic <kiliconu@itu.edu.tr>"]
edition = "2018"

[dependencies]
halo2 = { git = "https://github.com/zcash/halo2.git", rev = "d57c530d99893b8b70c4b50c8a372a29b6c56ec3" }
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8"
group = "0.11"
subtle = { version = "2.3", default-features = false }

[dev-dependencies]
rand_core = { version = "0.6", default-features = false }
rand_xorshift = "0.3"