[package]
name = "halo2arith"
version = "0.1.0"
authors = ["kilic <kiliconu@itu.edu.tr>"]
edition = "2018"

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8"
group = "0.11"
subtle = { version = "2.3", default-features = false }

[dependencies.halo2_zcash]
package = "halo2"
git = "https://github.com/zcash/halo2.git"
rev = "6630a143c1895dc7d608411fd9686cf29e637924"
optional = true

[dependencies.halo2_kzg]
package = "halo2"
git = "https://github.com/appliedzkp/halo2.git"
branch = "kzg"
optional = true

[features]
zcash = ["halo2_zcash"]
kzg = ["halo2_kzg"]

[dev-dependencies]
rand_core = { version = "0.6", default-features = false }
rand_xorshift = "0.3"


